--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <h1>¡Terreno en Venta en San Juan Opico SV!</h1>
         <p>Tu oportunidad de inversión está aquí. Un lugar perfecto para construir tus sueños.</p>
     </header>
-
+<p> Comprar un terreno es una de las decisiones más sabias que puedes tomar, ya que se trata de una inversión sólida que incrementa su valor con el tiempo. A diferencia de otros bienes que pierden valor, la tierra es limitada y siempre tendrá demanda, lo que la convierte en un activo seguro para tu futuro. Tener un terreno propio no solo te da libertad para construir tus sueños a tu medida, ya sea un hogar, un negocio o una casa de descanso, sino que también te ofrece estabilidad y tranquilidad financiera. Además, un terreno puede generarte ingresos pasivos al arrendarlo o desarrollarlo. ¡Imagina la tranquilidad de saber que cuentas con un patrimonio para ti y tu familia, algo que puede crecer y mantenerse en las generaciones futuras! No dejes pasar esta oportunidad de asegurar tu futuro y proteger tu dinero en un bien que siempre tendrás valor. </p>
     <!-- Sección de imágenes -->
     <section>
         <h2>Galería de Imágenes</h2>
